Fix for bug#7212: information_schema: "Can't find file" errors if storage engine gone(after review)